Чистка, оптимизация, убрано лишнее