@@ -2,6 +2,7 @@ package com.magmaguy.betterstructures.buildingfitter.util;
 
 import com.magmaguy.betterstructures.util.SurfaceMaterials;
 import com.sk89q.worldedit.extent.clipboard.Clipboard;
+import lombok.experimental.UtilityClass;
 import org.bukkit.Bukkit;
 import org.bukkit.Location;
 import org.bukkit.Material;
@@ -11,8 +12,10 @@ import org.bukkit.util.Vector;
 import java.util.ArrayList;
 import java.util.Collections;
 
+@UtilityClass
 public class Topology {
-    public static double scan(double startingScore, int scanStep, Clipboard schematicClipboard, Location iteratedLocation, Vector schematicOffset) {
+
+    public double scan(double startingScore, int scanStep, Clipboard schematicClipboard, Location iteratedLocation, Vector schematicOffset) {
         //if (schematicOffset == null) Bukkit.getLogger().info("oops the schematic offset is null");
         double score = startingScore;
         int width = schematicClipboard.getDimensions().x();
@@ -37,7 +40,7 @@ public class Topology {
         return score;
     }
 
-    private static double scanHighestLocations(int width, int depth, int scanStep, Location iteratedLocation, Vector schematicOffset, ArrayList<Integer> heights, double score) {
+    private double scanHighestLocations(int width, int depth, int scanStep, Location iteratedLocation, Vector schematicOffset, ArrayList<Integer> heights, double score) {
         int totalPointAmount = (int) Math.floor(Math.floor(width / (double) scanStep) * Math.floor(depth / (double) scanStep));
         for (int x = 0; x < width; x += scanStep) {
             for (int z = 0; z < depth; z += scanStep) {
@@ -48,7 +51,9 @@ public class Topology {
                 }
                 int safeGuard = 0;
                 while (SurfaceMaterials.ignorable(projectedLocation.getBlock().getType())) {
-                    if (projectedLocation.getBlock().getType().equals(Material.VOID_AIR)) return 0;
+                    if (projectedLocation.getBlock().getType() == Material.VOID_AIR)
+                        return 0;
+
                     projectedLocation.setY(projectedLocation.getY() - 1);
                     safeGuard++;
                     if (safeGuard > 50) {
@@ -69,8 +74,8 @@ public class Topology {
         return score;
     }
 
-    private static Location getHighestBlockAt(Location location) {
-        if (!location.getWorld().getEnvironment().equals(World.Environment.NETHER))
+    private Location getHighestBlockAt(Location location) {
+        if (location.getWorld().getEnvironment() != World.Environment.NETHER)
             return location.getWorld().getHighestBlockAt(location).getLocation();
         else {
             //This is middle point for the height in the Nether
@@ -95,14 +100,15 @@ public class Topology {
         }
     }
 
-    private static boolean validNetherSurface(Location location) {
+    private boolean validNetherSurface(Location location) {
         //See if current block is solid and if the one above it is air or similar to air
         if (!(!SurfaceMaterials.ignorable(location.getBlock().getType()) &&
-                SurfaceMaterials.ignorable(location.getBlock().getLocation().add(new Vector(0, 1, 0)).getBlock().getType())))
+                SurfaceMaterials.ignorable(location.getBlock().getLocation().add(0, 1, 0).getBlock().getType())))
             return false;
+
         //Scan 10 blocks vertically to make sure they're all air
         for (int i = 1; i < 11; i++) {
-            if (SurfaceMaterials.ignorable(location.clone().add(new Vector(0, i, 0)).getBlock().getType()))
+            if (SurfaceMaterials.ignorable(location.clone().add(0, i, 0).getBlock().getType()))
                 continue;
             return false;
         }
@@ -110,11 +116,11 @@ public class Topology {
     }
 
     //Checks for extreme height differences and establishes the mesh of heights to be checked later
-    private static double scanExtremeHeightDifferences(ArrayList<Integer> heights, double score) {
+    private double scanExtremeHeightDifferences(ArrayList<Integer> heights, double score) {
         //Sort to make math on points faster
         Collections.sort(heights);
         //Check difference between lowest and highest points
-        if (Math.abs(heights.get(0) - heights.get(heights.size() - 1)) >= 20) {
+        if (Math.abs(heights.getFirst() - heights.getLast()) >= 20) {
             //The schematicOffset between the lowest and highest blocks is too great
             //Bukkit.getLogger().info("Exited because of extreme height difference");
             return 0;
@@ -124,7 +130,7 @@ public class Topology {
     }
 
     //Determines and sets the average height for the paste
-    private static int setToAverageHeight(ArrayList<Integer> heights, Location iteratedLocation) {
+    private int setToAverageHeight(ArrayList<Integer> heights, Location iteratedLocation) {
         //Find the average height
         int averageFloorLevel = 0;
         for (Integer integer : heights) {
@@ -138,7 +144,7 @@ public class Topology {
     }
 
     //Scores the terrain variation, less extreme is better
-    private static double scoreTerrainHeightVariation(ArrayList<Integer> heights, int averageFloorLevel, double score) {
+    private double scoreTerrainHeightVariation(ArrayList<Integer> heights, int averageFloorLevel, double score) {
         //Score the difference between the average height and the heights of each individual location
         for (Integer integer : heights) {
             int difference = Math.abs(averageFloorLevel - integer);
